# oslearn

./: .gitignore  CMakeLists.txt  Makefile  Vagrantfile  bochsrc.bxrc  build.sh
boot/: CMakeLists.txt  loader.S  mbr.S
device/: console.c  console.h  ioqueue.c  ioqueue.h  keyboard.c  keyboard.h  timer.c  timer.h
include/: boot.inc
kernel/: debug.c  debug.h  global.h  init.c  init.h  interrupt.c  interrupt.h  kernel.S  main.c  memory.c  memory.h
lib/: stdint.h  string.c  string.h
lib/kernel/: bitmap.c  bitmap.h  io.h  list.c  list.h  print.S  print.h
lib/user/: syscall.c  syscall.h
thread/: switch.S  sync.c  sync.h  thread.c  thread.h
userprog/: process.c  process.h  syscall-init.c  tss.c  tss.h
