
# cmake 编译 nasm 文件
# https://blog.csdn.net/acsunqi/article/details/78418756

set(CMAKE_ASM_NASM_SOURCE_FILE_EXTENSIONS asm nasm  S)	# 加入 S 后缀
set(CMAKE_ASM_NASM_OBJECT_FORMAT bin)
#只是生成汇编的预处理文件
set(CMAKE_ASM_NASM_FLAGS "-e -I ${CMAKE_SOURCE_DIR}/include/") # 

# set(CMAKE_ASM_NASM_LINK_EXECUTABLE "<CMAKE_ASM_NASM_COMPILER> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
set(CMAKE_ASM_NASM_LINK_EXECUTABLE "<CMAKE_ASM_NASM_COMPILER> <CMAKE_ASM_NASM_LINK_FLAGS> <LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
enable_language(ASM_NASM)

add_executable(loader loader.S)
add_executable(mbr mbr.S)
set_target_properties(mbr loader
	PROPERTIES 
		SUFFIX .bin 
		# LINKER_LANGUAGE NASM
)

cmake_print_variables(
	CMAKE_ASM_NASM_COMPILER	# nasm
	# CMAKE_ASM_NASM_LINK_FLAGS
	# CMAKE_ASM_NASM_SOURCE_FILE_EXTENSIONS
	# CMAKE_ASM_NASM_OBJECT_FORMAT
	CMAKE_ASM_NASM_FLAGS
	 
	CMAKE_ASM_NASM_LINK_EXECUTABLE	
	CMAKE_ASM_NASM_COMPILE_OBJECT
	# CMAKE_NASM_LINK_EXECUTABLE
)
